--- a/app/build.gradle
+++ b/app/build.gradle
@@ -34,6 +34,7 @@ tasks.withType(JavaCompile).configureEach {
         allErrorsAsWarnings = true
         check('NullAway', net.ltgt.gradle.errorprone.CheckSeverity.WARN)
         option('NullAway:AnnotatedPackages', 'com.example')
+        option('NullAway:ExcludedFieldAnnotations', 'org.mockito.Mock')
     }
 }
 
